# docs/swagger.yaml
@@ -264,47 +264,7 @@ info:
   title: lonely planet
   version: "1.0"
 paths:
-  /application/done/:application_id/:
-    post:
-      consumes:
-      - application/json
-      description: 更新申收件人阅读状态, 需要在用户在申请提醒中点击需求或者点击小眼睛或者直接处理请求的同时, 通过请求这条来更新状态, 如果可以希望可以根据是否已读来判断是否进行此次请求以减少请求次数
-      parameters:
-      - description: 用户已查看的申请id, 在别的api中给出
-        in: path
-        name: application_id
-        required: true
-        type: string
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"msg":"success"} 成功'
-          schema:
-            $ref: '#/definitions/model.Res'
-        "400":
-          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
-            "message":"Lack Param Or Param Not Satisfiable."}'
-          schema:
-            $ref: '#/definitions/error.Error'
-        "401":
-          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
-            重新登录'
-          schema:
-            $ref: '#/definitions/error.Error'
-        "500":
-          description: '{"error_code":"30001", "message":"Fail."} 失败'
-          schema:
-            $ref: '#/definitions/error.Error'
-      summary: 更新收件人阅读状态
-      tags:
-      - remind
-  /application/solve/:application_id/:
+  /application/:application_id/:
     put:
       consumes:
       - application/json
@@ -355,6 +315,46 @@ paths:
       summary: 处理请求
       tags:
       - application
+  /application/done/:application_id/:
+    post:
+      consumes:
+      - application/json
+      description: 更新申收件人阅读状态, 需要在用户在申请提醒中点击需求或者点击小眼睛或者直接处理请求的同时, 通过请求这条来更新状态, 如果可以希望可以根据是否已读来判断是否进行此次请求以减少请求次数
+      parameters:
+      - description: 用户已查看的申请id, 在别的api中给出
+        in: path
+        name: application_id
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"msg":"success"} 成功'
+          schema:
+            $ref: '#/definitions/model.Res'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/error.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/error.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"Fail."} 失败'
+          schema:
+            $ref: '#/definitions/error.Error'
+      summary: 更新收件人阅读状态
+      tags:
+      - remind
   /application/todo/:
     get:
       consumes:
